--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,8 +29,9 @@ generate_messages(
   DEPENDENCIES
   std_msgs
   sensor_msgs
+  geometry_msgs
 )
 
-catkin_package(CATKIN_DEPENDS sensor_msgs std_msgs message_runtime)
+catkin_package(CATKIN_DEPENDS geometry_msgs std_msgs message_runtime)
 
 include_directories()
