--- a/package.xml
+++ b/package.xml
@@ -52,6 +52,7 @@
   <buildtool_depend>catkin</buildtool_depend>
   <depend>sensor_msgs</depend>
   <depend>std_msgs</depend>
+  <depend>geometry_msgs</depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
