--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,6 @@ generate_messages(
   geometry_msgs
 )
 
-catkin_package(CATKIN_DEPENDS geometry_msgs std_msgs message_runtime)
+catkin_package(CATKIN_DEPENDS geometry_msgs sensor_msgs std_msgs message_runtime)
 
 include_directories()
