--- a/package.xml
+++ b/package.xml
@@ -53,6 +53,7 @@
   <depend>sensor_msgs</depend>
   <depend>std_msgs</depend>
   <depend>geometry_msgs</depend>
+  <depend>vision_msgs</depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
