--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(butia_vision_msgs)
 
-find_package(catkin REQUIRED COMPONENTS std_msgs vision_msgs sensor_msgs genmsg message_generation)
+find_package(catkin REQUIRED COMPONENTS std_msgs vision_msgs geometry_msgs sensor_msgs genmsg message_generation)
 
 add_message_files(
   FILES
@@ -30,6 +30,6 @@ generate_messages(
   vision_msgs
 )
 
-catkin_package(CATKIN_DEPENDS geometry_msgs sensor_msgs vision_msgs std_msgs message_runtime)
+catkin_package(CATKIN_DEPENDS geometry_msgs sensor_msgs geometry_msgs vision_msgs std_msgs message_runtime)
 
 include_directories()
