--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ add_service_files(
   FILES
   FaceClassifierTraining.srv
   ListClasses.srv
-  PersonIntroducing.srv
+  PeopleIntroducing.srv
 )
 
 generate_messages(
