--- a/package.xml
+++ b/package.xml
@@ -53,6 +53,8 @@
   <depend>sensor_msgs</depend>
   <depend>std_msgs</depend>
   <depend>vision_msgs</depend>
+  <build_depend>visualization_msgs</build_depend>
+  <exec_depend>visualization_msgs</exec_depend>
   <depend>geometry_msgs</depend>
 
   <!-- The export tag contains other, unspecified, tags -->
